# pseudo-assembly

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  build.sh  testFile
include/: compMacros.h  interpreter.h  lexer.h  list.h  stack.h  token.h
interpreter/: CMakeLists.txt  build.sh  main.c  test
interpreter/include/: compMacros.h  errors.h  interpreter.h  interpreterCLI.h  lexer.h  list.h  stack.h  token.h
interpreter/src/: errors.c  interpreter.c  interpreterCLI.c  lexer.c  list.c  stack.c
src/: errors.c  interpreter.c  interpreterCLI.c  lexer.c  list.c  token.c
